--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
+    "@types/react-timeago": "^4.1.3",
     "next": "latest",
     "next-auth": "^4.18.7",
     "next-sanity": "^3.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-timeago": "^7.1.0",
     "react-twitter-embed": "^4.0.4"
   },
